Fri, 11 Jul 2008 14:11:08 -0400 <me@nikosapi.org>
Merge patch to fix bug #147 (Sync doesn't work)

	* src/gpodder/gui.py: Use Device.episode_on_device(episode) to retrive
	device_episode and simplify logic to determine whether an episode is on
	the device and eligible for removal
	* src/gpodder/sync.py: Add Device.episode_on_device(episode)

Fri, 11 Jul 2008 13:09:55 -0400 <me@nikosapi.org>
Update podcast tab title when adding or removing channels

	* src/gpodder/gui.py: Add update_podcasts_tab() and call it when a
	channel is added or removed

Thu, 10 Jul 2008 23:54:57 +0200 <thp@perli.net>
Update list of donators

	* src/gpodder/gui.py: Update list of donators

Thu, 10 Jul 2008 23:49:12 +0200 <thp@perli.net>
Don't warn the user when timestamp is None

	* src/gpodder/util.py: Don't warn the user when timestamp is None in
	gpodder.util.format_date; Thanks to Bernd Schlapsi for reporting this
	bug (Closes: http://bugs.gpodder.org/show_bug.cgi?id=148)

Wed, 09 Jul 2008 12:19:26 +0200 <thp@perli.net>
Simply advanced configuration editor, implement usability suggestions

	* data/gpodder.glade: Implement usability suggestions from
	http://gpodder.org/files/user_test_2008-05.pdf: Rename "Player" tab in
	preferences to "Device"; change "Filter:" to "Search for:" in advanced
	configuration editor
	* src/gpodder/config.py: Support code for changes in the advanced
	configuration editor dialog (model)
	* src/gpodder/gui.py: Modify the advanced configuration editor to have
	check boxes for boolean values, remove the "Type" column and rename
	the columns as suggested by the May 2008 user test; use italic font
	instead of bold for values set to something other than the default

Tue, 08 Jul 2008 21:25:24 -0400 <me@nikosapi.org>
Merge check free space before syncing patch

	* src/gpodder/gui.py: Display a dialog box informing the user in the
	event that there is insufficient free space on their device before
	syncing begins.